--- a/core/assets/workflow/workflow_step/locale/en/lang_screen_messages.xml
+++ b/core/assets/workflow/workflow_step/locale/en/lang_screen_messages.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_messages.xml,v 1.10 2011/06/28 05:22:19 mhaidar Exp $
+* $Id: lang_screen_messages.xml,v 1.11 2011/06/29 03:31:25 mhaidar Exp $
 *
 */
 -->
@@ -25,7 +25,7 @@
 		<field attribute="message_invitation">
 			<display_name>Body</display_name>
 			<note><![CDATA[<p>This message invites users to approve or reject changes to a workflow. It is sent when workflow is started on an asset, or when the workflow progresses one or more steps, and will be sent to all users able to approve the new workflow step. If this is empty, a generic message will be used.</p>
-			<p>Keywords available to this message include:</p>
+			<p>Keywords available to this message subject and body include:</p>
 			<ul>
 				<li><strong>%assetid%, %asset_name%, %type_code%</strong> - The ID, name and type code of the asset whose workflow has been started.</li>
 				<li><strong>%user_name%</strong> - The name of the message recipient</li>
@@ -52,7 +52,7 @@
 		<field attribute="message_review_invitation">
 			<display_name>Body</display_name>
 			<note><![CDATA[<p>This message invites users to approve or cancel the review of an asset. It is sent when workflow is started on an asset, or when the workflow progresses one or more steps, and will be sent to all users able to approve the new workflow step. If this is empty, a generic message will be used.</p>
-			<p>Keywords available to this message include:</p>
+			<p>Keywords available to this message subject and body include:</p>
 			<ul>
 				<li><strong>%assetid%, %asset_name%, %type_code%</strong> - The ID, name and type code of the asset whose workflow has been started.</li>
 				<li><strong>%user_name%</strong> - The name of the message recipient</li>
@@ -74,7 +74,7 @@
 			<display_name>Body</display_name>
 			<note><![CDATA[<p>This message is sent when a user approves the changes to an asset in workflow. It is sent to all users on the same step that were able to approve the workflow before the message was sent. If this is empty, a generic message will be used.<br/>
 			<strong>Note:</strong> If an asset has more than one workflow running, it will be sent to all invited users on all current steps. If the approving user was also in another workflow, a custom message will be sent to that workflow's currently invited users, if such a message exists. Those users who were not in the same workflow in the approving user will receive a generic message. Only one generic message will be sent to each user, per asset.</p>
-			<p>Keywords available to this message include:</p>
+			<p>Keywords available to this message subject and body include:</p>
 			<ul>
 				<li><strong>%assetid%, %asset_name%, %type_code%</strong> - The ID, name and type code of the affected asset.</li>
 				<li><strong>%user_name%</strong> - The name of the message recipient</li>
@@ -98,8 +98,8 @@
 		<field attribute="message_reject">
 			<display_name>Body</display_name>
 			<note><![CDATA[<p>This message is sent when a user rejects the changes to an asset in workflow. It is sent to all users on the same step that were able to approve the workflow before the message was sent. If this is empty, a generic message will be used.<br/>
-			<strong>Note:</strong> If an asset has multiple workflows, each workflow will use its current step's custom rejection message. A generic message is also sent to the user who originally started the workflow. Only one generic message will be sent to each user, per asset.
-			<p>Keywords available to this message include:</p>
+			<strong>Note:</strong> If an asset has multiple workflows, each workflow will use its current step's custom rejection message. A message is also sent to the user who originally started the workflow. Only one generic message will be sent to each user, per asset.
+			<p>Keywords available to this message subject and body include:</p>
 			<ul>
 				<li><strong>%asset_name%, %type_code%</strong> - The name and type code of the affected asset.</li>
 				<li><strong>%user_name%</strong> - The name of the message recipient</li>
@@ -121,8 +121,9 @@
 		</field>
 		<field attribute="message_review_cancel">
 			<display_name>Body</display_name>
-			<note><![CDATA[<p>This message is sent when a user cancels the review of an asset in workflow. It is sent to the user who originally started the workflow and to all users on the same step that were able to approve the workflow before the message was sent. If this is empty, a generic message will be used.<br/>
-			<p>Keywords available to this message include:</p>
+			<note><![CDATA[<p>This message is sent when a user cancels the review of an asset in workflow. It is sent to all users on the same step that were able to approve the workflow before the message was sent. If this is empty, a generic message will be used.<br/>
+			<strong>Note:</strong> If an asset has multiple workflows, each workflow will use its current step's custom cancellation message. A message is also sent to the user who originally started the workflow. Only one generic message will be sent to each user, per asset.
+			<p>Keywords available to this message subject and body include:</p>
 			<ul>
 				<li><strong>%assetid%, %asset_name%, %type_code%</strong> - The ID, name and type code of the asset whose workflow has been started.</li>
 				<li><strong>%user_name%</strong> - The name of the message recipient</li>
@@ -144,7 +145,7 @@
 		<field attribute="message_stale">
 			<display_name>Body</display_name>
 			<note><![CDATA[<p>This message is a notice to those with Admin permission on an asset in workflow, or all System Administrators if no-one with Admin permission exists, that their asset has been on a step in workflow for longer than expected. It is sent when the current step has been active for longer than the Details screen's <strong>Expiry Time</strong> setting, and escalation is disabled. It can also be sent when escalation is enabled, but this is the last step of the workflow - a workflow cannot be escalated to completion.</p>
-			<p>Keywords available to this message include:</p>
+			<p>Keywords available to this message subject and body include:</p>
 			<ul>
 				<li><strong>%assetid%, %asset_name%</strong> - The ID and name of the asset whose workflow has become stale.</li>
 				<li><strong>%schema%</strong> - The name of the workflow schema that has become stale.</li>
@@ -169,7 +170,7 @@
 		<field attribute="message_escalated">
 			<display_name>Body</display_name>
 			<note><![CDATA[<p>This message informs users of a workflow step that the workflow has been escalated to the next step (or sub-step) due to their inaction. It is sent when the current step has been active for longer than the Details screen's <strong>Expiry Time</strong> setting, escalation is enabled, and it is not the last step of the workflow. Following escalation, the newly invited users on the next step will receive an Invitation Message as usual.</p>
-			<p>Keywords available to this message include:</p>
+			<p>Keywords available to this message subject and body include:</p>
 			<ul>
 				<li><strong>%assetid%, %asset_name%</strong> - The ID and name of the asset whose workflow has been escalated.</li>
 				<li><strong>%schema%</strong> - The name of the workflow schema that is being escalated.</li>
