--- a/core/assets/workflow/workflow_schema/locale/en/lang_screen_messages.xml
+++ b/core/assets/workflow/workflow_schema/locale/en/lang_screen_messages.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_messages.xml,v 1.1 2011/06/27 05:44:34 mhaidar Exp $
+* $Id: lang_screen_messages.xml,v 1.2 2011/06/29 03:34:14 mhaidar Exp $
 *
 */
 -->
@@ -24,7 +24,7 @@
 		<field attribute="message_notify_on_live">
 			<display_name>Body</display_name>
 			<note><![CDATA[<p>This message is sent when a user changes the status of the asset to Live after the asset workflow is complete. If this is empty, a generic message will be used.</p>
-			<p>Keywords available to this message include:</p>
+			<p>Keywords available to this message subject and body include:</p>
 			<ul>
 				<li><strong>%asset_name%, %type_code%</strong> - The name and type code of the asset whose workflow has been started.</li>
 				<li><strong>%status%</strong> - The previous status</li>
