--- a/core/locale/en/lang_strings.xml
+++ b/core/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.393 2011/06/14 03:24:41 akarelia Exp $
+* $Id: lang_strings.xml,v 1.394 2011/06/30 05:07:58 ewang Exp $
 *
 */
 
@@ -346,6 +346,7 @@
 	<string source="system_login_suffix">System Login Suffix</string>
 	<string source="system_nocache_suffix">System Bypass Cache Suffix</string>
 	<string source="system_recache_suffix">System Clear Cache Suffix</string>
+	<string source="system_performance_suffix">System Performance Mode Suffix</string>
 	<string source="system_timezone">System Timezone</string>
 	<string source="system_tools">System Tools</string>
 	<string source="system_web_path_separator">System Web Path Separator</string>
