changes to the description of batch request text. The data returned has to be everything from the functions performed and not just the returned data of the last function executed.

--- a/packages/web_services/js_api/locale/en/lang_screen_details.xml
+++ b/packages/web_services/js_api/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.18 2011/07/08 05:28:34 akarelia Exp $
+* $Id: lang_screen_details.xml,v 1.19 2011/07/10 22:16:01 akarelia Exp $
 *
 */
 -->
@@ -73,7 +73,7 @@
 		</field>
 		<field attribute="batch_requests">
 			<display_name>Allow Batching Requests</display_name>
-			<note>Enables the &lt;i&gt;batchRequest&lt;/i&gt; function which can perform multiple function calls in one API call&lt;br /&gt; &lt;b&gt;NOTE:&lt;/b&gt; The returned result is just the output of the last performed function in the batched request</note>
+			<note>Enables the &lt;i&gt;batchRequest&lt;/i&gt; function which can perform multiple function calls in one API call&lt;br /&gt; &lt;b&gt;NOTE:&lt;/b&gt; The returned result is all data returned by the performed functions in the batched request</note>
 		</field>
 
     </section>
