Extending feature #5196 to Listng's 'Dynamic asset selection'. This means for dymanic parameter 'asset selection', one can chose between the options 'Return listing's root node's children' or 'Return empty result', if dymanic paramter is not supplied. NOTE: Dynamic root node option 'return empty result' overrides the dynamic asset selection option, which means if both dynamic root node and asset selection are configured for given Listing asset and 'return empty result' is set for dynamic root node option, then in absense of dynamic root node parameter the listing will always return empty result regardless of dynamic asset selection paramters and option. This is because the 'dyamic asset selection' checks if the selected assets are within the Listing's static/dynamic root nodes.

--- a/packages/cms/page_templates/page_asset_listing/locale/en/lang_screen_details.xml
+++ b/packages/cms/page_templates/page_asset_listing/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.21 2011/07/06 08:01:57 cupreti Exp $
+* $Id: lang_screen_details.xml,v 1.22 2011/07/11 02:06:58 cupreti Exp $
 *
 */
 -->
@@ -34,7 +34,11 @@
 		<field attribute="dynamic_root_option">
 			<display_name>If dynamic root not found</display_name>
 			<note />
-		</field>		
+		</field>
+		<field attribute="dynamic_asset_selection_option">
+			<display_name>If asset selection not specified</display_name>
+			<note />
+		</field>
 	</section>
 	<section name="Asset Locations">
 		<field>
