--- a/core/assets/metadata/metadata_fields/metadata_field_hierarchy/locale/en/lang_screen_details.xml
+++ b/core/assets/metadata/metadata_fields/metadata_field_hierarchy/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.5.8.1 2011/05/04 04:48:43 mhaidar Exp $
+* $Id: lang_screen_details.xml,v 1.5.8.2 2011/07/21 05:15:38 akarelia Exp $
 *
 */
 -->
@@ -35,7 +35,7 @@
 		</field>
 		<field attribute="description">
 			<display_name>Description</display_name>
-			<note />
+			<note>Use of HTML tags in description will be picked up by browser on the Metadata screen of the Asset it is applied to. This can conflict with other HTML on the page and may stop the screen from loading. Care needs to be taken here and use of entity name or entity number format is encouraged.</note>
 		</field>
 		<field attribute="scheme">
 			<display_name>Scheme</display_name>
