--- a/packages/filesystem/file_bridge/locale/en/lang_screen_details.xml
+++ b/packages/filesystem/file_bridge/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.1.1.1 2010/03/29 23:32:29 bpearson Exp $
+* $Id: lang_screen_details.xml,v 1.1.1.1.6.1 2011/07/22 07:53:18 ewang Exp $
 *
 */
 -->
@@ -22,8 +22,10 @@
 			<note />
 		</field>
 		<field attribute="path">
-			<display_name>Path</display_name>
-			<note />
+			<function_call>
+				<paint_function   name="paintPath"   />
+			</function_call>
+			<note/>
 		</field>
 	</section>
 </contents>
