--- a/packages/filesystem/file_bridge/locale/en/lang_screen_details.xml
+++ b/packages/filesystem/file_bridge/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.2 2011/07/22 06:49:00 ewang Exp $
+* $Id: lang_screen_details.xml,v 1.3 2011/07/22 07:57:01 ewang Exp $
 *
 */
 -->
@@ -21,7 +21,7 @@
 			<display_name>Name</display_name>
 			<note />
 		</field>
-		<field attribute="path">
+		<field>
 			<function_call>
 				<paint_function   name="paintPath"   />
 			</function_call>
